@@ -35,6 +35,12 @@
   <url type="homepage">https://nongnu.org/gsequencer</url>
 
   <releases>
+    <release version="3.4.7" date="2020-06-25">
+      <description>
+	<p>Improved pitch's immediate frequency to be an octave in ags_filter_util.c.</p>
+      </description>
+    </release>
+
     <release version="3.4.5" date="2020-06-23">
       <description>
 	<p>Improved filter util to use projection during 2nd pitch rewrite.</p>
